--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "browser-sync": "2.26.7",
     "cssnano": "4.1.10",
     "del": "5.1.0",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-cache": "1.1.3",
     "gulp-concat": "2.6.1",
     "gulp-htmlmin": "5.0.1",
